force-app/main/default/objects/nepa_detected_protection_layer__c/nepa_detected_protection_layer__c.object-meta.xml
<CustomObject>
    <label>NEPA Detected Protection Layer</label>
    <pluralLabel>NEPA Detected Protection Layers</pluralLabel>
    <description>One record per detected federal protection layer per GIS proximity run. Replaces the unstructured nepa_protection_areas__c text summary with queryable records. Used by NEPA_Team_Assembly_Orchestrator to assemble specialist teams and create field-survey Work Orders. Add new NEPA_Layer_Discipline__mdt records to route new layers to disciplines without modifying flows.</description>
    <nameField>
        <label>Detection Number</label>
        <type>AutoNumber</type>
        <displayFormat>DL-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>