force-app/main/default/objects/nepa_detected_protection_layer__c/fields/nepa_ec_triggered__c.field-meta.xml
<CustomField>
    <fullName>nepa_ec_triggered__c</fullName>
    <label>EC Triggered</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True when this layer's Extraordinary_Circumstances_Keyword__c matched one or more features found in the proximity query. When any detected layer has EC Triggered = true, the parent Program.nepa_extraordinary_circumstances__c is set to true, which may downgrade a CE to EA.</description>
</CustomField>