force-app/main/default/objects/nepa_detected_protection_layer__c/fields/nepa_feature_count__c.field-meta.xml
<CustomField>
    <fullName>nepa_feature_count__c</fullName>
    <label>Feature Count</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Count of features returned by the ArcGIS spatial proximity query. 0 = no hit; nepa_is_hit__c = false. Used with nepa_is_hit__c to filter records for team assembly.</description>
</CustomField>