force-app/main/default/objects/nepa_detected_protection_layer__c/fields/nepa_feature_name__c.field-meta.xml
<CustomField>
    <fullName>nepa_feature_name__c</fullName>
    <label>Feature Name</label>
    <type>Text</type>
    <length>255</length>
    <description>First feature key attribute from the ArcGIS response (e.g., wetland type, superfund site name, critical habitat unit). Sourced from Result_Key_Field__c in NEPA_GIS_Layer__mdt. Nullable — EJScreen layers return an index value instead.</description>
</CustomField>