force-app/main/default/objects/nepa_detected_protection_layer__c/fields/nepa_gis_run_timestamp__c.field-meta.xml
<CustomField>
    <fullName>nepa_gis_run_timestamp__c</fullName>
    <label>GIS Run Timestamp</label>
    <type>DateTime</type>
    <description>Timestamp when the NEPA_GIS_Proximity_IP ran and produced this detection. Updated in place on each re-run via upsert, so always reflects the most recent check. Mirrors Program.nepa_gis_last_checked__c.</description>
</CustomField>