force-app/main/default/objects/nepa_detected_protection_layer__c/fields/nepa_is_hit__c.field-meta.xml
<CustomField>
    <fullName>nepa_is_hit__c</fullName>
    <label>Is Hit</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True when this layer returned at least one feature (nepa_feature_count__c > 0) or, for EJScreen-type layers (Layer_Number__c = -1), when an EJ index value is present. NEPA_Team_Assembly_Orchestrator filters on nepa_is_hit__c = true to identify which specialists are needed.</description>
</CustomField>