force-app/main/default/objects/nepa_detected_protection_layer__c/fields/nepa_layer_developer_name__c.field-meta.xml
<CustomField>
    <fullName>nepa_layer_developer_name__c</fullName>
    <label>Layer Developer Name</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>DeveloperName from NEPA_GIS_Layer__mdt. Foreign key to NEPA_Layer_Discipline__mdt.GIS_Layer_Developer_Name__c. Used by team assembly flow to resolve discipline and Work Order template. Combined with nepa_program__c to form the upsert key for idempotent re-runs.</description>
</CustomField>