force-app/main/default/objects/nepa_detected_protection_layer__c/fields/nepa_layer_label__c.field-meta.xml
<CustomField>
    <fullName>nepa_layer_label__c</fullName>
    <label>Layer Label</label>
    <type>Text</type>
    <length>255</length>
    <description>Layer_Label__c snapshot from NEPA_GIS_Layer__mdt at detection time (e.g., NWI Wetlands, USFWS Critical Habitat). Stored for display and Work Order subject token substitution without re-querying CMT.</description>
</CustomField>