force-app/main/default/objects/nepa_detected_protection_layer__c/fields/nepa_program__c.field-meta.xml
<CustomField>
    <fullName>nepa_program__c</fullName>
    <label>Program</label>
    <type>MasterDetail</type>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Detected Protection Layers</relationshipLabel>
    <relationshipName>Detected_Protection_Layers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>Parent NEPA Project (Program) whose GIS proximity check produced this detection. Cascade delete — layer records are removed when the project is deleted.</description>
</CustomField>