force-app/main/default/objects/nepa_detected_protection_layer__c/fields/nepa_upsert_key__c.field-meta.xml
<CustomField>
    <fullName>nepa_upsert_key__c</fullName>
    <label>Upsert Key</label>
    <type>Text</type>
    <length>255</length>
    <externalId>true</externalId>
    <description>Composite external ID for idempotent upsert. Set by DR_Upsert_Detected_Layer to {programId}_{layerDeveloperName}. Re-running the GIS proximity check for the same project + layer updates the existing record rather than creating a duplicate. Must be a writable Text field (not formula) to serve as the Salesforce upsert external ID key.</description>
    <inlineHelpText>Composite upsert key set automatically by the GIS proximity IP. Format: {ProgramId}_{LayerDeveloperName}.</inlineHelpText>
</CustomField>